# project

./: .gitignore  DATABASE_GUIDE.md  Dockerfile  README.md  alembic.ini  app.js  docker-compose.yml  index.html  main.py  pyproject.toml
database/migrations/: env.py
src/: app.py
src/configs/: webconfig.py
src/controllers/: accounttest_router.py  pdf_parser_router.py
src/database/: __init__.py
src/domain/: accounttest_dto.py
src/entity/: account_entities.py  accounttest_entity.py  resume_entities.py
src/services/: accounttest_service.py  education_mapper.py  pdf_parser_service.py  resume_service.py
